--- a/client/css/navbar.css
+++ b/client/css/navbar.css
@@ -14,3 +14,9 @@ div.navbar-collapse.collapse.in {
 body {
   padding-top: 52px;
 }
+
+.tab-body {
+	padding: 10px;
+	border: 1px solid #ddd;
+	border-top:  0px;
+}
