--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,1 +1,22 @@
-<h1>Home</h1>
+<div class="container">
+	<h1>Home</h1>
+
+	<ioport port-id="2"></ioport>
+
+	<div class="row">
+	  <div class="col-md-3 col-sm-4 col-xs-6" data-bind-height-to-width="0.5">
+			<div style="height:100%; width:100%; background-color:orange">1</div>
+		</div>
+		<div class="col-md-3 col-sm-4 col-xs-6" data-bind-height-to-width="1.0">
+			<div style="height:100%; width:100%; background-color:blue">2</div>
+		</div>
+		<div class="col-md-3 col-sm-4 col-xs-6" data-bind-height-to-width>
+			<div style="height:100%; width:100%; background-color:green">3</div>
+		</div>
+		<div class="col-md-3 col-sm-4 col-xs-6" data-bind-height-to-width="2">
+			<div style="height:100%; width:100%; background-color:yellow">4</div>
+		</div>
+	</div>
+
+
+</div>
