--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,12 +1,14 @@
-<div class="container-fluid">
+<div class="container">
 	<h1>Home</h1>
 
 	<ioport port-id="2"></ioport>
 
-	<div class="row">
-	  <div class="col-md-3 col-sm-4 col-xs-6" data-bind-height-to-width="0.5">
-			<div style="height:100%; width:100%; background-color:orange">1</div>
-		</div>
+	
+	<button ng-click="tileToggle=!tileToggle">Toggle</button>
+	<div class="row toggle">
+
+
+		<tile class="flip-in" ng-show="tileToggle">TestTile</tile>
 		<div class="col-md-3 col-sm-4 col-xs-6" data-bind-height-to-width="1.0">
 			<div style="height:100%; width:100%; background-color:blue">2</div>
 		</div>
